# foxmd

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
src/: lib.rs  main.rs  tests.rs
