[package]
name = "foxmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
regex = "1"
lazy_static = "1.4.0"
threadpool = "1.8.1"
num_cpus = "1.14.0"
walkdir = "2.3.2"
